--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,54 @@
-[tool.poetry]
-name = "fastapp"
-version = "0.0.1"
+[tool.pdm]
+[tool.pdm.dev-dependencies]
+dev = ["black>=23.3.0", "flake8>=6.0.0", "isort>=5.12.0", "pytest>=7.3.1"]
+
+[project]
+name = "ewal_api"
+version = "0.1.0"
 description = ""
-authors = ["Evan Baird <mrcartoonster@gmail.com>"]
+authors = [{ name = "Oracen", email = "alex.stenlake@gmail.com" }]
+dependencies = [
+    "pydantic>=1.10.7",
+    "openai>=0.27.6",
+    "Jinja2>=3.1.2",
+    "fastapi[all]>=0.95.2",
+]
+requires-python = ">=3.10"
+license = { text = "MIT" }
 
-[tool.poetry.dependencies]
-python = "^3.8"
-fastapi = {extras = ["all"], version = "^0.62.0"}
-mimesis = "^4.1.2"
-emoji = "^0.6.0"
-gunicorn = "^20.0.4"
-email-validator = "^1.1.2"
 
-[tool.poetry.dev-dependencies]
-pytest = "^6.1.2"
-pytest-picked = "^0.4.4"
-ipython = "^7.19.0"
-prettyprinter = "^0.18.0"
-pre-commit = "^2.9.3"
-pendulum = "^2.1.2"
-pytest-clarity = "^0.3.0-alpha.0"
-pytest-emoji = "^0.2.0"
-pytest-randomly = "^3.5.0"
-pytest-pythonpath = "^0.7.3"
-httpx = "^0.16.1"
+[tool.pdm.scripts]
+start-app = { shell = "streamlit run ./app/Home.py" }
+run-example = { shell = "streamlit run ./app/Home.py" }
+checker = { call = "arg_checker.run:main" }
+git-hooks = { shell = "pre-commit install --install-hooks && pre-commit install --hook-type commit-msg" }
+test = { shell = "pytest ." }
+autoflake-fix = { cmd = "autoflake ." }
+black-fix = { cmd = "black ." }
+isort-fix = { cmd = "isort ." }
+flake8-check = { cmd = "flake8 ." }
+black-check = { cmd = "black --check ." }
+isort-check = { cmd = "isort --check-only ." }
+mypy-check = "mypy --namespace-packages --check-untyped-defs ."
+format = { composite = ["autoflake-fix", "black-fix", "isort-fix"] }
+lint = { composite = [
+    "mypy-check",
+    "flake8-check",
+    "black-check",
+    "isort-check",
+] }
 
-[tool.pytest.ini_options]
-addopts = "-rssxX -l --tb=short --strict --randomly-seed=last --diff-type=split --emoji -vvv -p no:warnings"
-xfail_strict = "True"
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+[tool.isort]
+multi_line_output = 3
+force_to_top = ["os", "sys"]
+profile = "black"
+skip_gitignore = true
+
+[tool.autoflake]
+recursive = true
+in-place = true
+remove-all-unused-imports = true
+ignore-init-module-imports = true
+remove-unused-variables = true
+ignore-pass-statements = false
